Run make generate
Signed-off-by: Fatih Türken <turkenf@gmail.com>
Signed-off-by: nilan3 <nilanthanb1994@gmail.com>

--- a/package/crds/cloudrun.gcp.upbound.io_v2jobs.yaml
+++ b/package/crds/cloudrun.gcp.upbound.io_v2jobs.yaml
@@ -2339,6 +2339,10 @@ spec:
                           this justification. If useDefault is False, then it must
                           be empty. For more information on breakglass, see https://cloud.google.com/binary-authorization/docs/using-breakglass
                         type: string
+                      policy:
+                        description: 'The path to a binary authorization policy. Format:
+                          projects/{project}/platforms/cloudRun/{policy-name}'
+                        type: string
                       useDefault:
                         description: If True, indicates to use the default project's
                           binary authorization policy. If False, binary authorization
@@ -2431,16 +2435,9 @@ spec:
                             items:
                               properties:
                                 args:
-                                  description: 'Arguments to the entrypoint. The docker
-                                    image''s CMD is used if this is not provided.
-                                    Variable references $(VAR_NAME) are expanded using
-                                    the container''s environment. If a variable cannot
-                                    be resolved, the reference in the input string
-                                    will be unchanged. The $(VAR_NAME) syntax can
-                                    be escaped with a double $$, ie: $$(VAR_NAME).
-                                    Escaped references will never be expanded, regardless
-                                    of whether the variable exists or not. More info:
-                                    https://kubernetes.io/docs/tasks/inject-data-application/define-command-argument-container/#running-a-command-in-a-shell'
+                                  description: Arguments to the entrypoint. The docker
+                                    image's CMD is used if this is not provided. Variable
+                                    references are not supported in Cloud Run.
                                   items:
                                     type: string
                                   type: array
@@ -2468,17 +2465,10 @@ spec:
                                         description: Volume's name.
                                         type: string
                                       value:
-                                        description: 'Variable references $(VAR_NAME)
-                                          are expanded using the previous defined
-                                          environment variables in the container and
-                                          any route environment variables. If a variable
-                                          cannot be resolved, the reference in the
-                                          input string will be unchanged. The $(VAR_NAME)
-                                          syntax can be escaped with a double $$,
-                                          ie: $$(VAR_NAME). Escaped references will
-                                          never be expanded, regardless of whether
-                                          the variable exists or not. Defaults to
-                                          "", and the maximum length is 32768 bytes'
+                                        description: Literal value of the environment
+                                          variable. Defaults to "" and the maximum
+                                          allowed length is 32768 characters. Variable
+                                          references are not supported in Cloud Run.
                                         type: string
                                       valueSource:
                                         description: |-
@@ -2983,6 +2973,10 @@ spec:
                           this justification. If useDefault is False, then it must
                           be empty. For more information on breakglass, see https://cloud.google.com/binary-authorization/docs/using-breakglass
                         type: string
+                      policy:
+                        description: 'The path to a binary authorization policy. Format:
+                          projects/{project}/platforms/cloudRun/{policy-name}'
+                        type: string
                       useDefault:
                         description: If True, indicates to use the default project's
                           binary authorization policy. If False, binary authorization
@@ -3072,16 +3066,9 @@ spec:
                             items:
                               properties:
                                 args:
-                                  description: 'Arguments to the entrypoint. The docker
-                                    image''s CMD is used if this is not provided.
-                                    Variable references $(VAR_NAME) are expanded using
-                                    the container''s environment. If a variable cannot
-                                    be resolved, the reference in the input string
-                                    will be unchanged. The $(VAR_NAME) syntax can
-                                    be escaped with a double $$, ie: $$(VAR_NAME).
-                                    Escaped references will never be expanded, regardless
-                                    of whether the variable exists or not. More info:
-                                    https://kubernetes.io/docs/tasks/inject-data-application/define-command-argument-container/#running-a-command-in-a-shell'
+                                  description: Arguments to the entrypoint. The docker
+                                    image's CMD is used if this is not provided. Variable
+                                    references are not supported in Cloud Run.
                                   items:
                                     type: string
                                   type: array
@@ -3109,17 +3096,10 @@ spec:
                                         description: Volume's name.
                                         type: string
                                       value:
-                                        description: 'Variable references $(VAR_NAME)
-                                          are expanded using the previous defined
-                                          environment variables in the container and
-                                          any route environment variables. If a variable
-                                          cannot be resolved, the reference in the
-                                          input string will be unchanged. The $(VAR_NAME)
-                                          syntax can be escaped with a double $$,
-                                          ie: $$(VAR_NAME). Escaped references will
-                                          never be expanded, regardless of whether
-                                          the variable exists or not. Defaults to
-                                          "", and the maximum length is 32768 bytes'
+                                        description: Literal value of the environment
+                                          variable. Defaults to "" and the maximum
+                                          allowed length is 32768 characters. Variable
+                                          references are not supported in Cloud Run.
                                         type: string
                                       valueSource:
                                         description: |-
@@ -3786,6 +3766,10 @@ spec:
                           this justification. If useDefault is False, then it must
                           be empty. For more information on breakglass, see https://cloud.google.com/binary-authorization/docs/using-breakglass
                         type: string
+                      policy:
+                        description: 'The path to a binary authorization policy. Format:
+                          projects/{project}/platforms/cloudRun/{policy-name}'
+                        type: string
                       useDefault:
                         description: If True, indicates to use the default project's
                           binary authorization policy. If False, binary authorization
@@ -4005,16 +3989,9 @@ spec:
                             items:
                               properties:
                                 args:
-                                  description: 'Arguments to the entrypoint. The docker
-                                    image''s CMD is used if this is not provided.
-                                    Variable references $(VAR_NAME) are expanded using
-                                    the container''s environment. If a variable cannot
-                                    be resolved, the reference in the input string
-                                    will be unchanged. The $(VAR_NAME) syntax can
-                                    be escaped with a double $$, ie: $$(VAR_NAME).
-                                    Escaped references will never be expanded, regardless
-                                    of whether the variable exists or not. More info:
-                                    https://kubernetes.io/docs/tasks/inject-data-application/define-command-argument-container/#running-a-command-in-a-shell'
+                                  description: Arguments to the entrypoint. The docker
+                                    image's CMD is used if this is not provided. Variable
+                                    references are not supported in Cloud Run.
                                   items:
                                     type: string
                                   type: array
@@ -4042,17 +4019,10 @@ spec:
                                         description: Volume's name.
                                         type: string
                                       value:
-                                        description: 'Variable references $(VAR_NAME)
-                                          are expanded using the previous defined
-                                          environment variables in the container and
-                                          any route environment variables. If a variable
-                                          cannot be resolved, the reference in the
-                                          input string will be unchanged. The $(VAR_NAME)
-                                          syntax can be escaped with a double $$,
-                                          ie: $$(VAR_NAME). Escaped references will
-                                          never be expanded, regardless of whether
-                                          the variable exists or not. Defaults to
-                                          "", and the maximum length is 32768 bytes'
+                                        description: Literal value of the environment
+                                          variable. Defaults to "" and the maximum
+                                          allowed length is 32768 characters. Variable
+                                          references are not supported in Cloud Run.
                                         type: string
                                       valueSource:
                                         description: |-
