--- a/package/crds/containerattached.gcp.upbound.io_clusters.yaml
+++ b/package/crds/containerattached.gcp.upbound.io_clusters.yaml
@@ -1061,7 +1061,8 @@ spec:
                   distribution:
                     description: |-
                       The Kubernetes distribution of the underlying attached cluster. Supported values:
-                      "eks", "aks".
+                      "eks", "aks", "generic". The generic distribution provides the ability to register
+                      or migrate any CNCF conformant cluster.
                     type: string
                   fleet:
                     description: |-
@@ -1234,7 +1235,8 @@ spec:
                   distribution:
                     description: |-
                       The Kubernetes distribution of the underlying attached cluster. Supported values:
-                      "eks", "aks".
+                      "eks", "aks", "generic". The generic distribution provides the ability to register
+                      or migrate any CNCF conformant cluster.
                     type: string
                   fleet:
                     description: |-
@@ -1587,7 +1589,8 @@ spec:
                   distribution:
                     description: |-
                       The Kubernetes distribution of the underlying attached cluster. Supported values:
-                      "eks", "aks".
+                      "eks", "aks", "generic". The generic distribution provides the ability to register
+                      or migrate any CNCF conformant cluster.
                     type: string
                   effectiveAnnotations:
                     additionalProperties:
