--- a/package/crds/compute.gcp.upbound.io_instancetemplates.yaml
+++ b/package/crds/compute.gcp.upbound.io_instancetemplates.yaml
@@ -3105,13 +3105,14 @@ spec:
                     properties:
                       confidentialInstanceType:
                         description: 'Defines the confidential computing technology
-                          the instance uses. SEV is an AMD feature. One of the following
-                          values: SEV, SEV_SNP. on_host_maintenance can be set to
-                          MIGRATE if confidential_instance_type is set to SEV and
-                          min_cpu_platform is set to "AMD Milan". Otherwise, on_host_maintenance
-                          has to be set to TERMINATE or this will fail to create the
-                          VM. If SEV_SNP, currently min_cpu_platform has to be set
-                          to "AMD Milan" or this will fail to create the VM.'
+                          the instance uses. SEV is an AMD feature. TDX is an Intel
+                          feature. One of the following values is required: SEV, SEV_SNP,
+                          TDX. on_host_maintenance can be set to MIGRATE if confidential_instance_type
+                          is set to SEV and min_cpu_platform is set to "AMD Milan".
+                          Otherwise, on_host_maintenance has to be set to TERMINATE
+                          or this will fail to create the VM. If SEV_SNP, currently
+                          min_cpu_platform has to be set to "AMD Milan" or this will
+                          fail to create the VM. TDX is only available in beta.'
                         type: string
                       enableConfidentialCompute:
                         description: Defines whether the instance should have confidential
@@ -4101,13 +4102,14 @@ spec:
                     properties:
                       confidentialInstanceType:
                         description: 'Defines the confidential computing technology
-                          the instance uses. SEV is an AMD feature. One of the following
-                          values: SEV, SEV_SNP. on_host_maintenance can be set to
-                          MIGRATE if confidential_instance_type is set to SEV and
-                          min_cpu_platform is set to "AMD Milan". Otherwise, on_host_maintenance
-                          has to be set to TERMINATE or this will fail to create the
-                          VM. If SEV_SNP, currently min_cpu_platform has to be set
-                          to "AMD Milan" or this will fail to create the VM.'
+                          the instance uses. SEV is an AMD feature. TDX is an Intel
+                          feature. One of the following values is required: SEV, SEV_SNP,
+                          TDX. on_host_maintenance can be set to MIGRATE if confidential_instance_type
+                          is set to SEV and min_cpu_platform is set to "AMD Milan".
+                          Otherwise, on_host_maintenance has to be set to TERMINATE
+                          or this will fail to create the VM. If SEV_SNP, currently
+                          min_cpu_platform has to be set to "AMD Milan" or this will
+                          fail to create the VM. TDX is only available in beta.'
                         type: string
                       enableConfidentialCompute:
                         description: Defines whether the instance should have confidential
@@ -5265,13 +5267,14 @@ spec:
                     properties:
                       confidentialInstanceType:
                         description: 'Defines the confidential computing technology
-                          the instance uses. SEV is an AMD feature. One of the following
-                          values: SEV, SEV_SNP. on_host_maintenance can be set to
-                          MIGRATE if confidential_instance_type is set to SEV and
-                          min_cpu_platform is set to "AMD Milan". Otherwise, on_host_maintenance
-                          has to be set to TERMINATE or this will fail to create the
-                          VM. If SEV_SNP, currently min_cpu_platform has to be set
-                          to "AMD Milan" or this will fail to create the VM.'
+                          the instance uses. SEV is an AMD feature. TDX is an Intel
+                          feature. One of the following values is required: SEV, SEV_SNP,
+                          TDX. on_host_maintenance can be set to MIGRATE if confidential_instance_type
+                          is set to SEV and min_cpu_platform is set to "AMD Milan".
+                          Otherwise, on_host_maintenance has to be set to TERMINATE
+                          or this will fail to create the VM. If SEV_SNP, currently
+                          min_cpu_platform has to be set to "AMD Milan" or this will
+                          fail to create the VM. TDX is only available in beta.'
                         type: string
                       enableConfidentialCompute:
                         description: Defines whether the instance should have confidential
